--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,9 @@
-/* Add CSS Styling */
+.avatar.proportioned{
+    width: 300px;
+    height: auto;
+}
+
+.avatar.proportioned{
+    width: 200px;
+    height: 400px;
+}
