--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,34 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  margin: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px 8px 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding-left: 170px;
+  padding-right: auto;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+}
+
+.title, .content{
+  margin: 8px;
 }
